--- a/css/index.css
+++ b/css/index.css
@@ -51,12 +51,16 @@ table {
   box-sizing:border-box;
   font-family: "Noto Sans TC", sans-serif;
 }
-
 .wrap {
+  display:flex;
+  flex-direction:column;
+}
+.travelOrder {
   padding:120px 0px;
   display:flex;
   justify-content:center;
 }
+
 .card {
   max-width:920px;
   display:flex;
@@ -73,7 +77,7 @@ table {
   height: 100%;
   justify-content:space-between;
 }
-img{
+.travelOrder img{
   max-width:350px;
 }
 .formText{
@@ -103,6 +107,7 @@ form {
   background-color: #FAFAFA;
   width:71%;
   padding-left:12px;
+  color:#818A91;
 }
 
 i {
@@ -129,4 +134,64 @@ i {
 .btn:hover {
   background-color: #004E4D;
   border:1px solid #004E4D;
+}
+
+
+.travelList {
+  background-color: #F7F7F7;
+  display:flex;
+  justify-content:center;
+  padding:0 400px 120px 400px;
+}
+.travelContent{
+   display:flex;
+  flex-direction:column;
+}
+.travelAllCard {
+   display:flex;
+  justify-content:center;
+  max-width:1100px;
+}
+.travelCard {
+  width:33.3333%;
+  margin-right:30px;
+  background-color: #fff;
+  border:1px solid #DEE2E6;
+  border-radius:4px;
+  box-shadow: 0px 3px 6px #00000029;
+}
+.travelImg img {
+  max-width:100%;
+}
+.search {
+  display:flex;
+  align-items:center; 
+  color:#818A91;
+}
+.searchBar {
+  width:30%;
+  padding:56px 0;
+  margin-left:5%;
+}
+.searchBar select{
+  border:1px solid #CED4DA;
+  border-radius:4px;
+  background-color: #fff;
+}
+.travelTitle {
+   padding:16px 0px;
+}
+.travelTitle h3 {
+  color:#00807E;
+  border-bottom:2px solid #007572;
+  font-size: 24px;
+}
+.travelDetail {
+  color:#818A91;
+  line-height:1.5;
+  
+}
+
+.travelCardText {
+  padding:0px 20px;
 }
